--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
             sudo apt-get update
             sudo apt-get upgrade
             sudo apt install openjdk-17-jdk openjdk-17-jre
+            sudo apt-cache search openjdk
             java -version
       - run:
           name: Download Dependencies
