--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,9 @@ jobs:
           name: Install OpenJDK 17
           command: |
             sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys B53DC80D13EDEF05
-            sudo apt-get update
-            sudo apt-get upgrade
-            sudo apt install openjdk-17-jdk openjdk-17-jre
-            sudo apt-cache search openjdk
+            sudo apt update
+            sudo apt upgrade
+            sudo apt install openjdk-11-jdk
             java -version
       - run:
           name: Download Dependencies
