--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,10 @@ jobs:
           name: Chmod permissions
           command: sudo chmod +x ./gradlew
       - run:
-          name: Install OpenJDK 17
+          name: Install JDK 17
           command: |
-            sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys B53DC80D13EDEF05
-            sudo apt update
-            sudo apt upgrade
-            sudo apt install openjdk-17-jdk
+            sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/jdk-17/bin/java 1
+            sudo update-alternatives --install /usr/bin/javac javac /usr/lib/jvm/jdk-17/bin/javac 1
             java -version
       - run:
           name: Download Dependencies
