--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,10 @@ orbs:
 jobs:
   build:
     executor: android/android
+
+    docker:
+      - image: circleci/openjdk:17-jdk
+      
     steps:
       - checkout
       - restore_cache:
