--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,15 @@ jobs:
             source $BASH_ENV
 
             java -version  # Memeriksa instalasi JDK
+      - run:
+          name: Set Java 17 as Default
+          command: |
+            sudo update-alternatives --install /usr/bin/java java $JDK_DIR/bin/java 1
+            sudo update-alternatives --install /usr/bin/javac javac $JDK_DIR/bin/javac 1
+            sudo update-alternatives --set java $JDK_DIR/bin/java
+            sudo update-alternatives --set javac $JDK_DIR/bin/javac
 
+            java -version  # Memeriksa perubahan versi Java
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
