--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ orbs:
 jobs:
   build:
     executor: android/android
-      
+    docker:
+      - image: 'cimg/openjdk:17.0'
     steps:
       - checkout
       - restore_cache:
