--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,10 @@ orbs:
  
 jobs:
   build:
-    executor: android/android
-    docker:
-      - image: 'cimg/openjdk:17.0'
+     executor:
+      name: android/android-machine
+      resource-class: large
+      tag: 2021.10.1
     steps:
       - checkout
       - restore_cache:
