--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,7 @@ orbs:
  
 jobs:
   build:
-     executor:
-      name: android/android-machine
-      resource-class: large
-      tag: 2021.10.1
+    executor: android/android-machine
     steps:
       - checkout
       - restore_cache:
