--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,9 @@ orbs:
  
 jobs:
   build:
-    executor: 
-      name: android/android-machine
+    executor: android/android
+    docker : 
+      - image: circleci/android:api-30-node
     steps:
       - checkout
       - restore_cache:
