--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,12 @@
 version: 2.1
  
 orbs:
-  android: circleci/android@0.2.1
+  android: circleci/android@2.3.0
  
 jobs:
   build:
-    executor: android/android
-    docker : 
-      - image: circleci/android:api-30-node
+    docker:
+      - image: cimg/android:2023.09
     steps:
       - checkout
       - restore_cache:
