--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -68,4 +68,7 @@ dependencies {
 
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+
+    // leak canary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 }
