--- a/core/build.gradle
+++ b/core/build.gradle
@@ -28,6 +28,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '17'
+        freeCompilerArgs = ["-Xstring-concat=inline"]
     }
 }
 
@@ -67,5 +68,9 @@ dependencies {
     // glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     kapt 'com.github.bumptech.glide:compiler:4.13.2'
+
+    // encrypt database
+    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
+    implementation "androidx.sqlite:sqlite-ktx:2.1.0"
 
 }
