--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
     id 'kotlin-parcelize'
-    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'com.google.devtools.ksp'
 }
 
 android {
@@ -25,6 +24,10 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -43,9 +46,6 @@ android {
         jvmTarget = '17'
     }
     dynamicFeatures = [':favoriteFeature']
-    kapt {
-        correctErrorTypes true
-    }
 }
 
 dependencies {
@@ -71,4 +71,7 @@ dependencies {
 
     // leak canary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+
+    // sweet Toast
+    implementation 'com.github.TheHasnatBD:SweetToast:1.0.2'
 }
