--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
+    id 'com.google.devtools.ksp' version '1.8.21-1.0.11' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
-    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
     id 'com.android.dynamic-feature' version '8.0.2' apply false
 }
 
