--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
     id 'kotlin-parcelize'
 }
 
@@ -57,7 +57,7 @@ dependencies {
     // room
     implementation "androidx.room:room-runtime:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
-    kapt "androidx.room:room-compiler:2.5.2"
+    ksp "androidx.room:room-compiler:2.5.2"
 
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
@@ -67,10 +67,10 @@ dependencies {
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
-    kapt 'com.github.bumptech.glide:compiler:4.13.2'
+    ksp 'com.github.bumptech.glide:compiler:4.13.2'
 
     // encrypt database
     implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation "androidx.sqlite:sqlite-ktx:2.1.0"
+    implementation "androidx.sqlite:sqlite-ktx:2.4.0"
 
 }
