--- a/favoriteFeature/build.gradle
+++ b/favoriteFeature/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+
+    // sweet Toast
+    implementation 'com.github.TheHasnatBD:SweetToast:1.0.2'
 }
